--- a/doc/bugs/Problem_with_umlauts_and_friends.mdwn
+++ b/doc/bugs/Problem_with_umlauts_and_friends.mdwn
@@ -12,3 +12,5 @@ sandbox page.
 
 > Yes, if you run a web browser in a non-utf8 locale, it can neither
 > display nor properly edit unicode. --[[Joey]]
+
+[[notabug|done]]
