--- a/doc/todo/default_content_for_new_post.mdwn
+++ b/doc/todo/default_content_for_new_post.mdwn
@@ -62,3 +62,5 @@ will also only work when using web-editing, but the people using
 rcs-editing (coining new terms, eh ;-)?) usually know what they're doing.
 
 --[[tschwinge]]
+
+> [[done]] in the [[plugins/edittemplate]] plugin. --[[Joey]]
