--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ ikiwiki (2.16) UNRELEASED; urgency=low
   * calendar: Work around block html parsing bug in markdown 1.0.1 by
     enclosing the calendar in an extra div.
   * Fix file pruning code to work if ikiwiki is run with "." as the srcdir.
+  * Add an edittemplate plugin, allowing registering template pages, that
+    provide default content for new pages created using the web frontend.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
 
