* Ensure that web edited pages always end in a newline.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ ikiwiki (2.16) UNRELEASED; urgency=low
     so that more than one plugin can use this hook.
     I believe this is a safe change, since only passwordauth uses this hook.
     (If some other plugin already used it, it would have broken passwordauth!)
+  * Ensure that web edited pages always end in a newline.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
 
