--- a/doc/plugins/shortcut/discussion.mdwn
+++ b/doc/plugins/shortcut/discussion.mdwn
@@ -3,6 +3,8 @@ I'd like to use a shortcut like \[[gnumach-1-branch ddb/db_expr.h]] to link to
 
 * Dashes are not allowed in shortcut identifiers.  Why?
 
+> No reason. Fixed in git. --[[Joey]]
+
 * The URL is rewritten to
     <http://cvs.savannah.gnu.org/viewvc/gnumach/ddb%2Fdb%5Fexpr%2Eh?view=log&root=hurd&pathrev=gnumach-1-branch>,
     which the remove server doesn't like.  Mind the esacping of [^A-Za-z0-9].
