--- a/doc/plugins/shortcut/discussion.mdwn
+++ b/doc/plugins/shortcut/discussion.mdwn
@@ -5,14 +5,4 @@ I'd like to use a shortcut like \[[gnumach-1-branch ddb/db_expr.h]] to link to
 
 > No reason. Fixed in git. --[[Joey]]
 
-* The URL is rewritten to
-    <http://cvs.savannah.gnu.org/viewvc/gnumach/ddb%2Fdb%5Fexpr%2Eh?view=log&root=hurd&pathrev=gnumach-1-branch>,
-    which the remove server doesn't like.  Mind the esacping of [^A-Za-z0-9].
-    Might this be a problem of the web server?
-
-Also, I'd like to put the shortcut usages into backticks
--- `[[iki shortcuts]]` --
-to have them displayed in the usual backtick-formatting.
-That also doesn't work, but this is an already-reported issue, as far as I know.
-
---[[tschwinge]]
+> (Moved other issue to [[bugs/shortcut_encoding]].)
