--- a/doc/templates/note.mdwn
+++ b/doc/templates/note.mdwn
@@ -1,6 +1,6 @@
-<span class="notebox">
+<div class="notebox">
 <TMPL_VAR text>
-</span>
+</div>
 <TMPL_UNLESS NAME="text">
 Use this template to insert a note into a page. The note will be styled to
 float to the right of other text on the page. This template has one
