--- a/doc/todo/Raw_view_link.mdwn
+++ b/doc/todo/Raw_view_link.mdwn
@@ -4,4 +4,10 @@ The configuration setting for Mercurial could be something like this:
 
     rawurl => "http://localhost:8000//raw-file/tip/\[[file]]",
 
+> What I want to do when I want to see if the raw source is either
+> click on the edit link, or click on history and navigate to it in the
+> history browser (easier to do in viewvc than in gitweb, IIRC).
+> Not that I'm opposed to the idea of a plugin that adds a Raw link
+> --[[Joey]]
+
 [[tag wishlist]]
