--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ ikiwiki (2.16) UNRELEASED; urgency=low
     acts on them, even if the value is expanded inside a block-level html
     element in the html template. Closes: #454058
   * Use a div in the note template rather than a span.
+  * shortcut: Expand %S to the raw input text, not url-encoded.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
 
