--- a/doc/bugs/shortcut_encoding.mdwn
+++ b/doc/bugs/shortcut_encoding.mdwn
@@ -24,3 +24,5 @@ That also doesn't work, but this is an already-reported issue, as far as I know.
 > doesn't decode the escaped characters in the path string.
 > 
 > I could add a %S that is not escaped, and leave %s escaped.. --[[Joey]]
+> 
+> [[done]]
