--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -59,8 +59,9 @@ This page controls what shortcut links the wiki supports.
 
 To add a new shortcut, use the `shortcut`
 [[ikiwiki/PreprocessorDirective]]. In the url, "%s" is replaced with the
-text passed to the named shortcut. The optional `desc` parameter controls
-the description of the link.
+text passed to the named shortcut, after url-encoding it, and '%S' is
+replaced with the raw, non-encoded text. The optional `desc` parameter
+controls the description of the link.
 
 Remember that the `name` you give the shortcut will become a new
 [[ikiwiki/PreprocessorDirective]].  Avoid using a `name` that conflicts
