--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -26,6 +26,7 @@ Projects
 * [The TOVA Company](http://www.tovatest.com) public site. We also use it for internal documentation and issue tracking, all with a [[rcs/Git]] backend.
 * Technical support websites for [Homebase](http://support.homebase.dk) and [Kaospilotene](http://support.kaospilot.no) (each with [source](http://source.homebase.dk/) [provided](http://source.kaospilot.no/))
 * [CampusGrün Hamburg](http://www.campusgruen.org/)
+* [Cario](http://cairographics.org/)
 
 Personal sites and blogs
 ========================
