--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -27,6 +27,7 @@ Projects
 * Technical support websites for [Homebase](http://support.homebase.dk) and [Kaospilotene](http://support.kaospilot.no) (each with [source](http://source.homebase.dk/) [provided](http://source.kaospilot.no/))
 * [CampusGrün Hamburg](http://www.campusgruen.org/)
 * [Cario](http://cairographics.org/)
+* The [awesome window manager homepage](http://awesome.naquadah.org/)
 
 Personal sites and blogs
 ========================
