--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -88,5 +88,6 @@ Personal sites and blogs
 Please feel free to add your own ikiwiki site!
 
 See also: [Debian ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
+and [[google "powered by ikiwiki" desc="google search for ikiwiki sites"]].
 
 While nothing makes me happier than knowing that ikiwiki has happy users, dropping some change in the [[TipJar]] is a nice way to show extra appreciation.
