--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -88,6 +88,6 @@ Personal sites and blogs
 Please feel free to add your own ikiwiki site!
 
 See also: [Debian ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
-and [google search for ikiwiki powered sites](http://www.google.com/search?q=powered%20by%20ikiwiki).
+and [google search for ikiwiki powered sites](http://www.google.com/search?q=%22powered%20by%20ikiwiki%22).
 
 While nothing makes me happier than knowing that ikiwiki has happy users, dropping some change in the [[TipJar]] is a nice way to show extra appreciation.
