--- a/doc/bugs/Can__39__t_deplete_page__63__.mdwn
+++ b/doc/bugs/Can__39__t_deplete_page__63__.mdwn
@@ -1,5 +1,5 @@
-The issue from [[plugins/shortcut/discussion]] has been fixed.
-I wanted to remove the old text from that pages, as it serves no further value.
+The issue from [[plugins/shortcut/discussion|plugins/shortcut/discussion]] has been fixed.
+I wanted to remove the old text from that page, as it serves no further value.
 On web-editing I erased all the text, entered a change notice and selected
 *Save Page*.
 I was, however, thrown back to the web-editing frame, with the old text in it
