* Allow editing a page and deleting all content, while still disallowing   creating a new page that's entirely empty.

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,8 @@ ikiwiki (2.16) UNRELEASED; urgency=low
   * Use a div in the note template rather than a span.
   * shortcut: Expand %S to the raw input text, not url-encoded.
   * Don't increment feed numbers when an inline has no feeds. (Nis Martensen)
+  * Allow editing a page and deleting all content, while still disallowing
+    creating a new page that's entirely empty.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
 
