--- a/doc/bugs/Can__39__t_deplete_page__63__.mdwn
+++ b/doc/bugs/Can__39__t_deplete_page__63__.mdwn
@@ -4,3 +4,5 @@ On web-editing I erased all the text, entered a change notice and selected
 *Save Page*.
 I was, however, thrown back to the web-editing frame, with the old text in it
 restored, instead of the page being cleared.
+
+>> [[done]] --[[Joey]]
