web commit by Cornelis

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -1,11 +1,9 @@
-This is the SandBox, a page anyone can edit to try out ikiwiki.
+This is the SandBox, a page anyone can edit to try out this fab ikiwiki.
 
-Foobar.
+# Table of Contents
+testhead
+sandbox
 
-----
-geht das?
-<http://www.orf.at/>
-Hellas zusammen!
 
 <h2>testhead</h2>
 ----
@@ -13,6 +11,7 @@ Do re me fa so la te... git?
 
 i see. i see. lalala hmmmmmmmm.
 
+## sandbox
 [[sandbox]] does that work? yep. yay!
 
 # テスト。
