--- a/debian/changelog
+++ b/debian/changelog
@@ -38,7 +38,7 @@ ikiwiki (2.16) UNRELEASED; urgency=low
   * Don't increment feed numbers when an inline has no feeds. (Nis Martensen)
   * Allow editing a page and deleting all content, while still disallowing
     creating a new page that's entirely empty.
-  * meta: Drop support for "meta link", since supporting this for internal 
+  * meta: Drop support for "meta link", since supporting this for internal
     links required meta to be run during scan, which complicated its data
     storage, since it had to clear data stored during the scan pass to avoid
     duplicating it during the normal preprocessing pass.
@@ -52,6 +52,7 @@ ikiwiki (2.16) UNRELEASED; urgency=low
     stored data before preprocessing, this hack was ugly, and broken (cf:
     liw's disappearing openids).
   * aggregate: Convert filter hook to a needsbuild hook.
+  * map: Don't inline images.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
 
