--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -11,7 +11,7 @@ Some examples of using shortcuts include:
 This page controls what shortcut links the wiki supports.
 
 * [[shortcut name=google url="http://www.google.com/search?q=%s"]]
-* [[shortcut name=archive url="http://web.archive.org/*/%s"]]
+* [[shortcut name=archive url="http://web.archive.org/*/%S"]]
 * [[shortcut name=gmap url="http://maps.google.com/maps?q=%s"]]
 * [[shortcut name=gmsg url="http://groups.google.com/groups?selm=%s"]]
 * [[shortcut name=wikipedia url="http://en.wikipedia.org/wiki/%s"]]
@@ -37,7 +37,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
 * [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
 * [[shortcut name=hoogle url="http://haskell.org/hoogle/?q=%s"]]
-* [[shortcut name=iki url="http://ikiwiki.info/%s/"]]
+* [[shortcut name=iki url="http://ikiwiki.info/%S/"]]
 * [[shortcut name=ljuser url="http://%s.livejournal.com/"]]
 * [[shortcut name=rfc url="http://www.ietf.org/rfc/rfc%s.txt" desc="RFC %s"]]
 * [[shortcut name=c2 url="http://c2.com/cgi/wiki?%s"]]
@@ -53,8 +53,6 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=cia url="http://cia.vc/stats/project/%s"]]
 * [[shortcut name=ciauser url="http://cia.vc/stats/user/%s"]]
 * [[shortcut name=flickr url="http://www.flickr.com/photos/%s"]]
-* [[shortcut name=zooomr url="http://www.zooomr.com/photos/%s"]]
-  * Note: You have to include the username and number in here, such as `bob/123455`.
 
 To add a new shortcut, use the `shortcut`
 [[ikiwiki/PreprocessorDirective]]. In the url, "%s" is replaced with the
