* brokenlinks: Don't list the same link multiple times. (%links might   contain multiple copies of the same link)

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,8 @@ ikiwiki (2.16) UNRELEASED; urgency=low
     liw's disappearing openids).
   * aggregate: Convert filter hook to a needsbuild hook.
   * map: Don't inline images.
+  * brokenlinks: Don't list the same link multiple times. (%links might
+    contain multiple copies of the same link)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
 
