* git: Correct display of multiline commit messages in recentchanges.

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ ikiwiki (2.16) UNRELEASED; urgency=low
   * map: Don't inline images.
   * brokenlinks: Don't list the same link multiple times. (%links might
     contain multiple copies of the same link)
+  * git: Correct display of multiline commit messages in recentchanges.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
 
