* Re-organise dependencies and recommends now that recommends are installed   by default.

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-ikiwiki (2.16) UNRELEASED; urgency=low
+ikiwiki (2.16) unstable; urgency=low
 
   Many of the pages in ikiwiki's basewiki have been moved and renamed in this
   release, to avoid the basewiki including pages with names like "blog".
