--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.16) UNRELEASED; urgency=low
+ikiwiki (2.16) unstable; urgency=low
 
   * Major basewiki reorganisation. Most pages moved into ikiwiki/ subdirectory
     to avoid polluting the main namespace, and some were further renamed.
@@ -56,8 +56,10 @@ ikiwiki (2.16) UNRELEASED; urgency=low
   * brokenlinks: Don't list the same link multiple times. (%links might
     contain multiple copies of the same link)
   * git: Correct display of multiline commit messages in recentchanges.
+  * Re-organise dependencies and recommends now that recommends are installed
+    by default.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Dec 2007 16:55:23 -0500
 
 ikiwiki (2.15) unstable; urgency=low
 
