--- a/doc/todo/Debian_package_could_Recommend_gcc_+_libc6-dev__44___not_Depend.mdwn
+++ b/doc/todo/Debian_package_could_Recommend_gcc_+_libc6-dev__44___not_Depend.mdwn
@@ -1,4 +1,7 @@
-IkiWiki doesn't actually need a C compiler etc. except for CGI (and other wrappers?). As it's perfectly possible to use IkiWiki without the CGI mode, would it be possible to make the Debian package Recommend gcc/libc6-dev/etc., rather than Depending on them?
+IkiWiki doesn't actually need a C compiler etc. except for CGI (and other
+wrappers?). As it's perfectly possible to use IkiWiki without the CGI mode,
+would it be possible to make the Debian package Recommend
+gcc/libc6-dev/etc., rather than Depending on them?
 
 > My approach with the dependencies of the package is to depend on
 > everything that is needed to use ikiwiki for a fairly full-featured wiki (but
@@ -13,5 +16,7 @@ IkiWiki doesn't actually need a C compiler etc. except for CGI (and other wrappe
 > I might move these things to recommends once recommends are automatically
 > installed by apt. That will be sorting itself out over the next month or
 > so. --[[Joey]]
+
+> [[done]]
 
 [[wishlist]]
