web commit by http://ptecza.myopenid.com/: * Addendum

--- a/doc/bugs/Insecure_dependency_in_mkdir.mdwn
+++ b/doc/bugs/Insecure_dependency_in_mkdir.mdwn
@@ -1,5 +1,6 @@
-Please note that this is my second bug report, because the first was
-unsuccessfully (bad characters in post title?).
+Joey, please see RecentChanges and note that this is my second bug report,
+because the first was unsuccessfully (bad characters in post title?).
+Could you please tidy it up?
 
 I've just upgraded my ikiwiki from version 2.11 to the latest version 2.15.
 I use my own rebuilt ikiwiki package for Ubuntu Gutsy box. Now I can't rebuild
