web commit by http://ptecza.myopenid.com/: * Update

--- a/doc/bugs/Insecure_dependency_in_mkdir.mdwn
+++ b/doc/bugs/Insecure_dependency_in_mkdir.mdwn
@@ -21,3 +21,7 @@ I've read ikiwiki changelog for the previous releases and unfortunately
 I can't see any related entries. Any ideas?
 
 --[[Paweł|ptecza]]
+
+> **Update**: I've came back to ikiwiki 2.11 and... the bug still exists!
+> Probably the reason is that I've removed all content of `/var/www/blog/`
+> before mass rebuilding. --[[Paweł|ptecza]]
