--- a/doc/bugs/Insecure_dependency_in_mkdir.mdwn
+++ b/doc/bugs/Insecure_dependency_in_mkdir.mdwn
@@ -54,3 +54,6 @@ I can't see any related entries. Any ideas?
 >>        drwxr-xr-x  5 ptecza ptecza 4096 2007-12-17 16:54 blog
 >>
 >> --[[Paweł|ptecza]]
+
+>> I need a set of files that you know I can use to reproduce the bug.
+>> --[[Joey]]
