--- a/doc/bugs/Insecure_dependency_in_mkdir.mdwn
+++ b/doc/bugs/Insecure_dependency_in_mkdir.mdwn
@@ -57,3 +57,7 @@ I can't see any related entries. Any ideas?
 
 >> I need a set of files that you know I can use to reproduce the bug.
 >> --[[Joey]]
+
+>> I'd forgotten about [this perl bug](http://bugs.debian.org/411786).
+>> If your problem is that bug, I can't help, it's a real bug in perl.
+>> --[[Joey]]
