--- a/doc/bugs/Insecure_dependency_in_mkdir.mdwn
+++ b/doc/bugs/Insecure_dependency_in_mkdir.mdwn
@@ -59,5 +59,5 @@ I can't see any related entries. Any ideas?
 >> --[[Joey]]
 
 >> I'd forgotten about [this perl bug](http://bugs.debian.org/411786).
->> If your problem is that bug, I can't help, it's a real bug in perl.
->> --[[Joey]]
+>> All I can do is work around it by disabling the taint checking. :-(
+>> (Which I've [[done]].) --[[Joey]]
