Explicitly say that I'd like to get this into ikiwiki

--- a/doc/plugins/contrib/htmlbalance.mdwn
+++ b/doc/plugins/contrib/htmlbalance.mdwn
@@ -9,3 +9,4 @@ blog post pulled in by the [[ikiwiki/directive/inline]] directive doesn't
 leak into the rest of the page.
 
 htmlbalance is available from the 'htmlbalance' branch in [[smcv]]'s git repository.
+I'd like to get this plugin included in ikiwiki - any code review is welcome.
