Link to postcomment

--- a/doc/todo/supporting_comments_via_disussion_pages.mdwn
+++ b/doc/todo/supporting_comments_via_disussion_pages.mdwn
@@ -213,3 +213,5 @@ do you think so far? Known issues include:
   un-wikiish).
 
 --[[smcv]]
+
+I've updated smcvpostcomment and publicised it as [[plugins/contrib/postcomment]]. --[[smcv]]
