Fix tag directive

--- a/doc/plugins/contrib/postcomment.mdwn
+++ b/doc/plugins/contrib/postcomment.mdwn
@@ -1,5 +1,5 @@
 [[!template id=plugin name=postcomment author="[[Simon_McVittie|smcv]]"]]
-[[!tag type=useful]]
+[[!tag type/useful]]
 
 This plugin adds "blog-style" comments. The intention is that on a non-wiki site
 (like a blog) you can lock all pages for admin-only access, then allow otherwise
