adding htmlbalance; housekeeping
Used the contrib version of the plugin page since it seemed better than the
other one.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.71) UNRELEASED; urgency=low
+
+  * htmlbalance: New plugin contributed by Simon McVittie.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 17 Nov 2008 14:02:10 -0500
+
 ikiwiki (2.70) unstable; urgency=low
 
   * Avoid crash on malformed utf-8 discovered by intrigeri.
